--- a/src/app/products-cards/products-cards.component.html
+++ b/src/app/products-cards/products-cards.component.html
@@ -15,7 +15,7 @@
 
     <!-- Wishlist Love Icon -->
     <button mat-icon-button (click)="toggleWishlist(product)">
-      <mat-icon [color]="product.isfavourite ? 'warn' : ''">
+      <mat-icon [color]="product.Isfavourite ? 'warn' : ''">
         {{ product.isfavourite ? 'favorite' : 'favorite_border' }}
       </mat-icon>
     </button>
@@ -35,3 +35,5 @@
     </div>
   </div>
 </div>
+
+<!-- <app-chat></app-chat> -->
