--- a/src/app/product-page/product-page.component.css
+++ b/src/app/product-page/product-page.component.css
@@ -169,3 +169,9 @@
     align-items: center;
     height: 100vh; /* Full height to center the spinner */
   }
+
+  .delete-feedback-button {
+    margin-top: 5px;
+    font-size: 12px;
+  }
+  
