--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -9,35 +9,35 @@
     </button>
 </div>
   
-  <table class="mat-elevation-z8" mat-table [dataSource]="productList" matSortActive="list_Price" matSortDirection="asc" (matSortChange)="announceSortChange($event)" matSort matSortDisableClear>
+  <table class="mat-elevation-z8" mat-table [dataSource]="productList">
   
     <!-- Product Name Column -->
     <ng-container matColumnDef="product_Name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Product Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by product name">Product Name</th>
       <td mat-cell *matCellDef="let row">{{ row.product_Name }}</td>
     </ng-container>
   
     <!-- Listed Price Column -->
     <ng-container matColumnDef="list_Price">
-      <th mat-header-cell  *matHeaderCellDef mat-sort-header>Listed Price</th>
+      <th mat-header-cell  *matHeaderCellDef mat-sort-header sortActionDescription="Sort by product list_Price">Listed Price</th>
       <td mat-cell *matCellDef="let row">{{ row.list_Price }}</td>
     </ng-container>
   
     <!-- Quantity Column -->
     <ng-container matColumnDef="quantity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by product quantity">Quantity</th>
       <td mat-cell *matCellDef="let row">{{ row.quantity }}</td>
     </ng-container>
   
     <!-- Color Column -->
     <ng-container matColumnDef="color">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Color</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by product color">Color</th>
       <td mat-cell *matCellDef="let row">{{ row.color }}</td>
     </ng-container>
   
     <!-- Model Year Column -->
     <ng-container matColumnDef="model_Year">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Model Year</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by product model_Year">Model Year</th>
       <td mat-cell *matCellDef="let row">{{ row.model_Year }}</td>
     </ng-container>
   
