--- a/src/app/wish-list-products/wish-list-products.component.css
+++ b/src/app/wish-list-products/wish-list-products.component.css
@@ -44,7 +44,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vh; /* Full height to center the spinner */
   }
 
   /* mat-icon{
