--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -83,7 +83,7 @@
       <!-- Date of Birth -->
       <ng-container matColumnDef="dateOfBirth">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Birth</th>
-        <td mat-cell *matCellDef="let element">{{ element.dateOfBirth }}</td>
+        <td mat-cell *matCellDef="let element">{{ element.dateOfBirth | date }}</td>
       </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
